finishing on homepage layout + added onclick to article

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="forget_pass">Lupa Password?</string>
     <string name="letstrack">Let\'s Track!</string>
     <string name="news">News!</string>
+    <string name="news_title">Yuk! Cek Resep Ibu Sehat Untuk Resep Bunda Kreatif</string>
     <string name="parenting">Parenting</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
